--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -7,7 +7,7 @@
     width: min(1240px, 100%);
     padding-top: 54px;
     display: none;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         position: initial;
         padding-top: 0px;
     }
@@ -31,14 +31,14 @@
             translate: -50%;
             filter: var(--dropdown-arrow-color);
         }
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             border-radius: 0;
             background: transparent;
             box-shadow: none;
             &::before{content: none;}
             padding: 0 40px;
         }
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             padding: 0 20px;
         }
     }
@@ -54,7 +54,7 @@
         height: calc(min(582px, 100vh - 158px) - var(--inner-padding) * 2);
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             width: 100%;
             height: auto;
             border-right: none;
@@ -69,7 +69,7 @@
     + .menu-column {
         margin-top: 22px;
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         margin-top: 10px;
     }
     &__icon {
@@ -79,10 +79,10 @@
         width: 36px;
         height: 36px;
 
-        @include abstracts.breakpoint(xl) {
+        @include abstracts.screen(xl) {
             display: none;
         }
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: block;
 
         }
@@ -114,14 +114,14 @@
         font-size: 1.6rem;
         font-weight: 500;
         line-height: 150%;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             margin-bottom: 26px;
         }
     }
 
     &__list {
         margin-top: 19px;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             margin-top: 0;
         }
     }
@@ -157,7 +157,7 @@
     padding-left: var(--inner-padding);
 
     overflow-y: auto;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         position: initial;
         display: grid;
         grid-template-columns: 1fr;
@@ -172,7 +172,7 @@
     grid-template-columns: repeat(4, 1fr);
     height: var(--max-inner-height);
     padding-left: 0;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         grid-template-columns: 1fr;
         height: auto;
         display: none;
