--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -1,10 +1,6 @@
 @use "../abstracts";
 .slideshow{
     position: relative;
-    margin: 40px 0;
-    @include abstracts.breakpoint(md) {
-        margin: 30px 0;
-    }
     &__inner {
         display: flex;
         overflow: hidden;
@@ -14,7 +10,7 @@
         flex-shrink: 0;
         width: 100%;
         padding-top: 34%;
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             padding-top: 50%;
         }
     }
@@ -42,7 +38,7 @@
         font-weight: 500;
         line-height: 144.444%;
         color: var(--color);
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             font-size: 1.4rem;
             line-height: 142.857%;
         }
