--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -7,7 +7,7 @@
 .header{
     // background: #eeeeee;
     background: var(--header-bg-color);
-    @include abstracts.breakpoint(lg){
+    @include abstracts.screen(lg){
         box-shadow: 0px 20px 60px 10px var(--box-shadow-color)
     }
     
@@ -19,26 +19,26 @@
     padding: 30px 0;
     &__more{
         display:none;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
          display: block
         }
         
     }
-    @include abstracts.breakpoint(lg){
+    @include abstracts.screen(lg){
         justify-content: space-between;
         padding: 20px 0;
     }
-    @include abstracts.breakpoint(md){
+    @include abstracts.screen(md){
         justify-content: space-between;
         padding: 16px 0;
     }
 }
 .navbar{
     margin-left: 129px;
-    @include abstracts.breakpoint(xl){
+    @include abstracts.screen(xl){
         margin-left: 28px;
     }
-    @include abstracts.breakpoint(lg){
+    @include abstracts.screen(lg){
     //    display: none
     position: fixed;
     inset: 0 50% 0 0;
@@ -59,24 +59,24 @@
             opacity: 1;
         }
     }
-    @include abstracts.breakpoint(sm){
+    @include abstracts.screen(sm){
         inset: 0 20% 0 0;
     }
     &__close-btn{
         display: none;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             display: block;
             padding:10px 40px;
             z-index: 2;
         }
-        @include abstracts.breakpoint(sm){
+        @include abstracts.screen(sm){
             padding: 0 20px 10px;
         }
     }
     &__overlay{
         visibility: hidden;
         opacity: 0;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             position: fixed;
             inset: 0;
             background: rgba(0, 0, 0, 0.4);
@@ -87,17 +87,17 @@
     }
     &__list{
         @extend %flexItemCenter;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
             overscroll-behavior: contain;
             height: calc(100% - 40px);
         }
-        @include abstracts.breakpoint(md){
+        @include abstracts.screen(md){
             height: calc(100% - 140px);
         }
-        @include abstracts.breakpoint(sm){
+        @include abstracts.screen(sm){
             height: calc(100% - 124px);
         }
     }
@@ -105,7 +105,7 @@
         &:hover .dropdown{
             display: block;
         }
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             width: 100%;
             &:hover .dropdown{
             display: none;
@@ -124,26 +124,26 @@
         font-style: normal;
         font-weight: 500;
         line-height:  146.667%;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             justify-content: space-between;
             padding: 0 40px;
 
             font-size:1.6rem;
             line-height: 150%;;
         }
-        @include abstracts.breakpoint(sm){
+        @include abstracts.screen(sm){
             height: 44px;
             padding: 0 20px;
         }
     }
     &__arrow{
         margin-top: 4px;
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             rotate: -90deg;
         }
     }
     &__item--active &__arrow{
-        @include abstracts.breakpoint(lg){
+        @include abstracts.screen(lg){
             rotate: 0deg;
         }
     }
@@ -152,7 +152,7 @@
         @extend %flexItemCenter;
         gap: 20px;
         margin-left:auto;
-        @include abstracts.breakpoint(md){
+        @include abstracts.screen(md){
             margin-left: 0;
         } 
         &__group{
@@ -162,12 +162,12 @@
             border-radius: 8px;
             background: var(--top-act-group-bg-color);
             box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
-            @include abstracts.breakpoint(md){
+            @include abstracts.screen(md){
             display: none;
             }
         }
         &__group--single{
-            @include abstracts.breakpoint(lg){
+            @include abstracts.screen(lg){
         display: none;
         }
     }
@@ -203,7 +203,7 @@
     height: 50px;
     align-items: center;
     padding: 0 40px;
-    @include abstracts.breakpoint(sm){
+    @include abstracts.screen(sm){
         height: 44px;
         padding: 0 20px;
 
