page home browse Categories

--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -18,4 +18,11 @@ html{
   // Sidebar
   --sidebar-bg:#fff;
   --sidebar-shadow:rgba(23, 28, 40, 0.4);
+  // Cate Item
+  --cate-item-bg-color:#eee;
+  --cate-item-thumb-bg:#fff;
+  --cate-item-title-color:#000;
+   @include abstracts.screen(md){
+  --cate-item-bg-color:#fff;
+   }
 }
