--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -19,5 +19,9 @@ html.dark{
 // Sidebar
   --sidebar-bg:#292e39;
   --sidebar-shadow:rgba(23, 28, 40, 0.4);
+// Cate Item
+  --cate-item-bg-color:#171c28;
+  --cate-item-thumb-bg:#292e39;
+  --cate-item-title-color:#fff;
 
 }
