home product card

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -155,6 +155,8 @@ button {
   border: none;
   outline: none;
   background: transparent;
+  padding: 0;
+  cursor: pointer;
 }
 
 a, img, button, input, textarea, select {
@@ -1307,6 +1309,12 @@ html.dark {
   --cate-item-bg-color:#171c28;
   --cate-item-thumb-bg:#292e39;
   --cate-item-title-color:#fff;
+  --like-btn-shadow:rgba(124,124,124,0.20);
+  --filter-btn-color:#FFF;
+  --filter-btn-bg:#171c28;
+  --product-card-bg:#171c28;
+  --product-card-shadow-color: rgba(0,0,0,0.2);
+  --product-card-text:#fff;
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1330,6 +1338,12 @@ html {
   --cate-item-bg-color:#eee;
   --cate-item-thumb-bg:#fff;
   --cate-item-title-color:#000;
+  --like-btn-shadow:rgba(124,124,124,0.20);
+  --filter-btn-color:#6c6c72;
+  --filter-btn-bg:#fff;
+  --product-card-bg:#fff;
+  --product-card-shadow-color: rgba(237,237,246,0.2);
+  --product-card-text:#1A162E;
 }
 @media (max-width: 991.98px) {
   html {
@@ -1944,6 +1958,76 @@ html {
   }
 }
 
+.filter-btn {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  height: 36px;
+  padding: 0 14px;
+  border-radius: 6px;
+  color: var(--filter-btn-color);
+  background: var(--filter-btn-bg);
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 142.857%;
+}
+
+.like-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  box-shadow: 0px 20px 60px var(--like-btn-shadow);
+  border-radius: 50%;
+}
+
+.product-card {
+  padding: 16px;
+  border-radius: 20px;
+  background: var(--product-card-bg);
+  box-shadow: 0px 20px 60px 10px var(--product-card-shadow-color);
+}
+.product-card__img-wrap {
+  position: relative;
+  padding-top: 100%;
+}
+.product-card__thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.product-card__like-btn {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+.product-card__title {
+  margin-top: 16px;
+}
+.product-card__title, .product-card__price, .product-card__score {
+  color: var(--product-card-text);
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+}
+.product-card__brand {
+  margin: 16px 0;
+  color: #9e9da8;
+  font-size: 1.6rem;
+  line-height: 146.66%;
+}
+.product-card__row {
+  display: flex;
+  align-items: center;
+}
+.product-card__star {
+  margin: 0px 6px 0px;
+}
+
 .home__container {
   margin-top: 40px;
 }
@@ -1953,13 +2037,13 @@ html {
   }
 }
 .home__heading {
-  margin-bottom: 20px;
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 141.667%;
 }
 .home__cate {
   --grid-gutter-x:51px;
+  margin-top: 20px;
 }
 @media (max-width: 991.98px) {
   .home__cate {
@@ -1970,6 +2054,12 @@ html {
   .home__cate {
     --grid-gutter-y: 20px;
   }
+}
+.home__row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
