--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -23,5 +23,14 @@ html.dark{
   --cate-item-bg-color:#171c28;
   --cate-item-thumb-bg:#292e39;
   --cate-item-title-color:#fff;
+  /// like btn
+--like-btn-shadow:rgba(124,124,124,0.20);
+// filter button
+--filter-btn-color:#FFF; 
+--filter-btn-bg:#171c28; 
+// product card
+--product-card-bg:#171c28;
+--product-card-shadow-color: rgba(0,0,0,0.2);
+--product-card-text:#fff;
 
 }
