--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -23,6 +23,15 @@ html{
   --cate-item-thumb-bg:#fff;
   --cate-item-title-color:#000;
    @include abstracts.screen(md){
-  --cate-item-bg-color:#fff;
+    --cate-item-bg-color:#fff;
    }
+/// like btn
+--like-btn-shadow:rgba(124,124,124,0.20);
+// filter button
+--filter-btn-color:#6c6c72; 
+--filter-btn-bg:#fff; 
+// product card
+--product-card-bg:#fff;
+--product-card-shadow-color: rgba(237,237,246,0.2);
+--product-card-text:#1A162E;
 }
