--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 *,
 ::before,
 ::after {
@@ -32,4 +33,10 @@ a,img,button,input,textarea,select {
 }
 .icon{
   filter: var(--icon-color);
+}
+.container{
+  @include abstracts.screen(sm){
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
 }
