--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -22,4 +22,14 @@
 
     box-shadow: 0px 20px 60px var(--like-btn-shadow);
     border-radius: 50%;
+    &:not(&__liked) &__icon--liked{
+        display: none;
+    }
+    &__liked &__icon{
+        display: none;
+    }
+    &__icon--liked{
+        position: relative;
+        margin-top: 6px;
+    }
 }
