--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -34,4 +34,7 @@ html{
 --product-card-bg:#fff;
 --product-card-shadow-color: rgba(237,237,246,0.2);
 --product-card-text:#1A162E;
+// Filter form
+--filter-form-bg:#fff;
+--filter-form-shadow: rgba(200,200,200,0.4);
 }
