--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -165,6 +165,8 @@ a, img, button, input, textarea, select {
   color: inherit;
   -webkit-tap-highlight-color: transparent;
   outline: none;
+  border: none;
+  padding: 0;
 }
 
 .icon {
@@ -1354,6 +1356,7 @@ html {
   --product-card-text:#1A162E;
   --filter-form-bg:#fff;
   --filter-form-shadow: rgba(200,200,200,0.4);
+  --filter-form-tag-bg:#f8f8fb;
 }
 @media (max-width: 991.98px) {
   html {
@@ -2112,19 +2115,84 @@ html {
 .filter__form-slider::after {
   left: var(--max-value);
 }
-.filter__form-input {
+.filter__form-text-input, .filter__form-select-wrap {
+  border-radius: 6px;
+  border: 1px solid #d2d1d6;
+}
+.filter__form-text-input {
+  display: flex;
+  align-items: center;
+  height: 44px;
+  width: 334px;
+  padding: 0 16px;
+  overflow: hidden;
+}
+.filter__form-text-input--small {
   width: 121px;
   height: 36px;
   padding: 0 12px;
-  border-radius: 6px;
-  border: 1px solid #d2d1d6;
+}
+.filter__form-text-input--small .filter__form-input {
   font-size: 1.4rem;
+}
+.filter__form-input {
+  width: 100%;
+  font-size: 1.5rem;
   font-weight: 500;
   line-height: 142.857%;
 }
+.filter__form-input::placeholder {
+  font-weight: 400;
+  color: #9e9da8;
+}
+.filter__form-input-icon {
+  margin-left: 12px;
+}
+.filter__form-select-wrap {
+  display: flex;
+  align-items: center;
+  height: 45px;
+}
+.filter__form-select {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 14px;
+  min-width: var(--width, 108px);
+  height: calc(100% - 10px);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+  cursor: pointer;
+}
+.filter__form-select + .filter__form-select {
+  border-left: 1px solid #d2d1d6;
+}
+.filter__form-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 20px;
+}
+.filter__form-tag {
+  padding: 6px 12px;
+  border-radius: 6px;
+  color: #9e9da8;
+  background: var(--filter-form-tag-bg);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+  transition: color 0.25s;
+}
+.filter__form-tag:hover {
+  color: var(--text-color);
+}
 .filter__row {
   display: flex;
-  flex: 1;
+}
+.filter__separate {
+  width: 1px;
+  margin: 0 30px;
+  background: red;
 }
 
 .home__container {
