--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -31,6 +31,8 @@ a,img,button,input,textarea,select {
   color: inherit;
   -webkit-tap-highlight-color: transparent;
   outline: none;
+  border: none;
+  padding: 0;
 }
 .icon{
   filter: var(--icon-color);
