filter home page, close, open filter button

--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -5,13 +5,25 @@
 .filter{
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 55px;
 
     padding: 30px;
     border-radius: 20px;
 
     background: var(--filter-form-bg);
     filter: drop-shadow(8px 40px 90px  var(--filter-form-shadow));
+    transition: opacity,visibility;
+    transition-duration: 0.2s;
+    &.hide{
+        opacity: 0;
+        visibility: hidden;
+    }
+    &__arrow{
+        position: absolute;
+        height: 20.5px;
+        top: -16px;
+        right: 30px;
+    }
     &__heading{
         font-size: 2.2rem;
         font-weight:500;
@@ -150,5 +162,20 @@
         width: 1px;
         margin: 0 30px;
         background: red;
+    }
+    &__footer{
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 32px;
+    }
+    &__cancel, &__submit{
+        height: 38px;
+        padding:0 10px;
+    }
+    &__cancel{
+        font-size: 1.5rem;
+    }
+    &__submit{
+        font-size: 1.4rem;
     }
 }
