home page product filter button responsive

--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -32,5 +32,10 @@ html.dark{
 --product-card-bg:#171c28;
 --product-card-shadow-color: rgba(0,0,0,0.2);
 --product-card-text:#fff;
+// Filter form
+--filter-form-bg:#2f3441;
+--filter-form-shadow: rgba(0,0,0,0.4);
+--filter-form-tag-bg:#171c28;
+--filter-form-arrow:brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
 
 }
