--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -180,6 +180,10 @@ a, img, button, input, textarea, select {
   }
 }
 
+input {
+  background: transparent;
+}
+
 .row > *, .container-fluid, .container {
   padding-left: calc(var(--grid-gutter-x) * 0.5);
   padding-right: calc(var(--grid-gutter-x) * 0.5);
@@ -1325,6 +1329,10 @@ html.dark {
   --product-card-bg:#171c28;
   --product-card-shadow-color: rgba(0,0,0,0.2);
   --product-card-text:#fff;
+  --filter-form-bg:#2f3441;
+  --filter-form-shadow: rgba(0,0,0,0.4);
+  --filter-form-tag-bg:#171c28;
+  --filter-form-arrow:brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -2023,6 +2031,7 @@ html {
   font-weight: 400;
 }
 .btn--primary {
+  color: #171c28;
   background: #ffb700;
 }
 .btn--outline {
@@ -2095,12 +2104,21 @@ html {
   position: absolute;
   right: 0;
   top: 55px;
-  padding: 30px;
+  padding: 30px 0;
   border-radius: 20px;
   background: var(--filter-form-bg);
   filter: drop-shadow(8px 40px 90px var(--filter-form-shadow));
   transition: opacity, visibility;
   transition-duration: 0.2s;
+}
+@media (max-width: 575.98px) {
+  .filter {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    inset: 0;
+    border-radius: 0;
+  }
 }
 .filter.hide {
   opacity: 0;
@@ -2109,8 +2127,9 @@ html {
 .filter__arrow {
   position: absolute;
   height: 20.5px;
-  top: -16px;
-  right: 30px;
+  top: -15px;
+  right: 24px;
+  filter: var(--filter-form-arrow);
 }
 .filter__heading {
   font-size: 2.2rem;
@@ -2136,7 +2155,8 @@ html {
   margin-top: 20px;
 }
 .filter__form-group--inline {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
 .filter__form-slider {
@@ -2174,10 +2194,20 @@ html {
   padding: 0 16px;
   overflow: hidden;
 }
+@media (max-width: 575.98px) {
+  .filter__form-text-input {
+    width: 100%;
+  }
+}
 .filter__form-text-input--small {
   width: 121px;
   height: 36px;
   padding: 0 12px;
+}
+@media (max-width: 1199.98px) {
+  .filter__form-text-input--small {
+    width: 100%;
+  }
 }
 .filter__form-text-input--small .filter__form-input {
   font-size: 1.4rem;
@@ -2191,6 +2221,11 @@ html {
 .filter__form-input::placeholder {
   font-weight: 400;
   color: #9e9da8;
+}
+@media (max-width: 575.98px) {
+  .filter__form-input {
+    font-size: 1.6rem;
+  }
 }
 .filter__form-input-icon {
   margin-left: 12px;
@@ -2212,6 +2247,11 @@ html {
   line-height: 142.857%;
   cursor: pointer;
 }
+@media (max-width: 1199.98px) {
+  .filter__form-select {
+    flex: 1;
+  }
+}
 .filter__form-select + .filter__form-select {
   border-left: 1px solid #d2d1d6;
 }
@@ -2219,6 +2259,11 @@ html {
   display: flex;
   flex-wrap: wrap;
   gap: 10px 20px;
+}
+@media (max-width: 575.98px) {
+  .filter__form-tags {
+    gap: 10px;
+  }
 }
 .filter__form-tag {
   padding: 6px 12px;
@@ -2246,15 +2291,47 @@ html {
   justify-content: flex-end;
   margin-top: 32px;
 }
+@media (max-width: 575.98px) {
+  .filter__footer {
+    position: sticky;
+    bottom: 20px;
+    background: var(--filter-form-bg);
+  }
+}
 .filter__cancel, .filter__submit {
   height: 38px;
   padding: 0 10px;
+}
+@media (max-width: 575.98px) {
+  .filter__cancel, .filter__submit {
+    flex: 1;
+    height: 42px;
+  }
 }
 .filter__cancel {
   font-size: 1.5rem;
 }
 .filter__submit {
   font-size: 1.4rem;
+}
+.filter__heading, .filter__content, .filter__footer {
+  padding: 0 30px;
+}
+.filter__content {
+  max-height: calc(100vh - 350px);
+  overflow-y: auto;
+  overscroll-behavior: contain;
+}
+@media (max-width: 1199.98px) {
+  .filter__content {
+    flex-direction: column;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__content {
+    max-height: calc(100vh - 230px);
+    padding-bottom: 20px;
+  }
 }
 
 .home__container {
