--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 .filter-wrap{
     position: relative;
     z-index: 1;
@@ -7,13 +8,21 @@
     right: 0;
     top: 55px;
 
-    padding: 30px;
+    padding: 30px 0;
     border-radius: 20px;
 
     background: var(--filter-form-bg);
     filter: drop-shadow(8px 40px 90px  var(--filter-form-shadow));
     transition: opacity,visibility;
     transition-duration: 0.2s;
+    @include abstracts.screen(sm){
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        inset: 0;
+        border-radius: 0;
+    }
+   
     &.hide{
         opacity: 0;
         visibility: hidden;
@@ -21,8 +30,9 @@
     &__arrow{
         position: absolute;
         height: 20.5px;
-        top: -16px;
-        right: 30px;
+        top: -15px;
+        right: 24px;
+        filter: var(--filter-form-arrow);
     }
     &__heading{
         font-size: 2.2rem;
@@ -47,7 +57,8 @@
         &-group{
             margin-top: 20px;
             &--inline{
-                display: flex;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
                 gap: 30px;
             }
         }
@@ -89,10 +100,16 @@
 
             padding: 0 16px;
             overflow: hidden;
+            @include abstracts.screen(sm){
+                width: 100%;
+            }
             &--small{
                 width: 121px;
                 height: 36px;
                 padding: 0 12px;
+                @include abstracts.screen(xl){
+                    width: 100%;
+                }
             }
         }
         &-text-input--small &-input{
@@ -106,7 +123,10 @@
             &::placeholder{
                 font-weight: 400;
                 color:#9e9da8;
-            }   
+            } 
+            @include abstracts.screen(sm){
+                font-size: 1.6rem;
+            }  
 
            &-icon{
             margin-left: 12px;
@@ -129,6 +149,9 @@
             font-weight: 500;
             line-height: 142.857%;
             cursor: pointer;
+            @include abstracts.screen(xl){
+                flex:1;
+            }
         }
         &-select + &-select{
            border-left: 1px solid #d2d1d6;
@@ -137,6 +160,9 @@
             display: flex;
             flex-wrap: wrap;
             gap:10px 20px;
+            @include abstracts.screen(sm){
+                gap:10px;
+            }
         }
         &-tag{ 
             padding:6px 12px;
@@ -167,15 +193,43 @@
         display: flex;
         justify-content: flex-end;
         margin-top: 32px;
+        @include abstracts.screen(sm){
+            position: sticky;
+            bottom: 20px;
+            background: var(--filter-form-bg);
+        }
+        
+        
+
     }
     &__cancel, &__submit{
         height: 38px;
         padding:0 10px;
+        @include abstracts.screen(sm){
+            flex: 1;
+            height: 42px;
+        }
     }
     &__cancel{
         font-size: 1.5rem;
     }
     &__submit{
         font-size: 1.4rem;
+    }
+    &__heading,&__content,&__footer
+    {
+        padding: 0 30px;
+    }
+    &__content{
+        max-height: calc(100vh - 350px);
+        overflow-y: auto;
+        overscroll-behavior: contain;
+        @include abstracts.screen(xl){
+            flex-direction: column;
+        }
+        @include abstracts.screen(sm){
+            max-height: calc(100vh - 230px);
+            padding-bottom: 20px;
+        }
     }
 }
