--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,57 @@
 <div class="footer__inner">
-    <h2>Footer content</h2>
+    <div class="footer__row">
+        <!-- Footer column 1 -->
+         <div class="footer__col">
+            <h3 class="footer__heading">Shop</h3>
+            <ul class="footer__list">
+                <li><a href="#!" class="footer__link">All Departments</a></li>
+                <li><a href="#!" class="footer__link">TV & Video</a></li>
+                <li><a href="#!" class="footer__link">Wearable Technology</a></li>
+                <li><a href="#!" class="footer__link">Computers</a></li>
+                <li><a href="#!" class="footer__link">Savings</a></li>
+            </ul>
+         </div>
+         <!-- Footer column 2 -->
+         <div class="footer__col">
+            <h3 class="footer__heading">Support</h3>
+            <ul class="footer__list">
+                <li><a href="#!" class="footer__link">Store locator</a></li>
+                <li><a href="#!" class="footer__link">Order status</a></li>
+            </ul>
+         </div>
+         <!-- Footer column 3 -->
+         <div class="footer__col">
+            <h3 class="footer__heading">Company</h3>
+            <ul class="footer__list">
+                <li><a href="#!" class="footer__link">Customer service</a></li>
+                <li><a href="#!" class="footer__link">Term of Use</a></li>
+                <li><a href="#!" class="footer__link">Privacy</a></li>
+                <li><a href="#!" class="footer__link">Careers</a></li>
+                <li><a href="#!" class="footer__link">About</a></li>
+                <li><a href="#!" class="footer__link">Afiliates</a></li>
+            </ul>
+         </div>
+         <!-- Footer column 4 -->
+         <div class="footer__col">
+            <h3 class="footer__heading">Contact</h3>
+            <ul class="footer__list">
+                <li>
+                    <p class="footer__label">Email</p>
+                    <a href="#!" class="footer__link">Contact us</a>
+                </li>
+                <li>
+                    <p class="footer__label">Telephone</p>
+                    <a href="#!" class="footer__link">18000000</a>
+                </li>
+                <li>
+                    <p class="footer__label">Address</p>
+                    <p class="footer__text">No. 28, Street No. 1, Ward 6, District 8</p>
+                </li>
+                <li>
+                    <p class="footer__label">Hours</p>
+                    <p class="footer__text">08:00 AM - 17:00 PM</p>
+                </li>
+            </ul>
+         </div>
+    </div>
 </div>
