page home footer copyright

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,24 @@
 <div class="footer__inner">
     <div class="footer__row">
         <!-- Footer column 1 -->
+        <div class="footer__col">
+            <div class="footer__logo-box">
+                <!-- logo --> 
+                <a href="./" class="logo">
+                    <img src="./asset/icons/logo.svg" class="logo__img" alt="Gorcery Mart Logo" id="Logo">
+                    <h1 class="logo__title">grocerymart</h1>
+                </a>
+                <p class="footer__desc">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis nihil culpa, delectus voluptas sit tempora animi ea nisi doloribus a voluptates.
+                </p>
+                <p class="footer__help-text"> Receive product news and updates.</p>
+                <form action="" class="footer__form">
+                    <input type="text" class="footer__input" placeholder="Email Address">
+                    <button class="btn btn--primary">Send</button>
+                </form>
+            </div>
+        </div>
+        <!-- Footer column 2 -->
          <div class="footer__col">
             <h3 class="footer__heading">Shop</h3>
             <ul class="footer__list">
@@ -11,7 +29,7 @@
                 <li><a href="#!" class="footer__link">Savings</a></li>
             </ul>
          </div>
-         <!-- Footer column 2 -->
+         <!-- Footer column 3 -->
          <div class="footer__col">
             <h3 class="footer__heading">Support</h3>
             <ul class="footer__list">
@@ -19,7 +37,7 @@
                 <li><a href="#!" class="footer__link">Order status</a></li>
             </ul>
          </div>
-         <!-- Footer column 3 -->
+         <!-- Footer column 4 -->
          <div class="footer__col">
             <h3 class="footer__heading">Company</h3>
             <ul class="footer__list">
@@ -31,17 +49,19 @@
                 <li><a href="#!" class="footer__link">Afiliates</a></li>
             </ul>
          </div>
-         <!-- Footer column 4 -->
+         <!-- Footer column 5 -->
          <div class="footer__col">
             <h3 class="footer__heading">Contact</h3>
             <ul class="footer__list">
                 <li>
                     <p class="footer__label">Email</p>
-                    <a href="#!" class="footer__link">Contact us</a>
+                    <a href="mailto:contact@grocerymart.com" class="footer__link">
+                        contact@grocerymart.com
+                    </a>
                 </li>
                 <li>
                     <p class="footer__label">Telephone</p>
-                    <a href="#!" class="footer__link">18000000</a>
+                    <a href="tel:18000000" class="footer__link">18000000</a>
                 </li>
                 <li>
                     <p class="footer__label">Address</p>
@@ -53,5 +73,11 @@
                 </li>
             </ul>
          </div>
+    </div>
+    <div class="footer__bottom">
+        <p class="copyright">@ 2010 - 2025 Grocery Mart. All rights reserved</p>
+        <div class="footer__socials">
+            <a href="" class="footer__social-link"></a>
+        </div>
     </div>
 </div>
