--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1624,11 +1624,21 @@ html {
 }
 
 .footer {
-  padding: 60px 0;
+  padding: 50px 0;
 }
 .footer__row {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+  grid-template-columns: 2fr 1.3fr 1fr 1fr 1.5fr;
+}
+.footer__desc {
+  margin-top: 30px;
+  font-size: 1.5rem;
+  line-height: 1.4;
+}
+.footer__help-text {
+  margin-top: 40px;
+  font-size: 1.4rem;
 }
 .footer__heading {
   text-transform: uppercase;
@@ -1636,11 +1646,47 @@ html {
   font-size: 1.8rem;
 }
 .footer__list {
-  margin-top: 30px;
+  margin-top: 18px;
+}
+.footer__link, .footer__text {
+  padding: 8px 0;
+  font-size: 1.5rem;
+  line-height: 1.4;
 }
 .footer__link {
   display: inline-block;
-  padding: 8px 0;
+}
+.footer__link:hover {
+  color: #0071dc;
+}
+.footer__text {
+  color: #6e6d74;
+}
+.footer__label {
+  margin-top: 20px;
+  font-weight: 500;
+}
+.footer__form {
+  display: flex;
+  gap: 10px;
+  padding: 16px 0;
+}
+.footer__input {
+  width: 100%;
+  padding: 8px 12px;
+  border-radius: 6px;
+  border: 1px solid #d2d1d6;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.footer__input::placeholder {
+  font-weight: 400;
+}
+.footer__bottom {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
