--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,11 +1,21 @@
 .footer{
-    padding: 60px 0;
-    &__inner{
+    padding: 50px 0;
+    // &__inner{
 
-    }
+    // }
     &__row{
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        gap: 50px;
+        grid-template-columns: 2fr 1.3fr 1fr 1fr 1.5fr;
+    }
+    &__desc{
+        margin-top: 30px;
+        font-size: 1.5rem;
+        line-height: 1.4;
+    }
+    &__help-text{
+        margin-top: 40px;
+        font-size: 1.4rem;
     }
     &__heading{
         text-transform: uppercase;
@@ -13,10 +23,46 @@
         font-size: 1.8rem;
     }
     &__list{
-        margin-top: 30px;
+        margin-top: 18px;
+    }
+    &__link, &__text{
+        padding: 8px 0;
+        font-size: 1.5rem;
+        line-height: 1.4;
     }
     &__link{
         display: inline-block;
-        padding: 8px 0;
+        &:hover{
+            color:#0071dc;
+        }
+    }
+    &__text{
+        color: #6e6d74;
+    }
+    &__label{
+        margin-top: 20px;
+        font-weight: 500;
+    }
+    &__form{
+        display: flex;
+        gap: 10px;
+        padding: 16px 0;
+    }
+    &__input{
+        width: 100%;
+        padding: 8px 12px;
+        border-radius: 6px;
+        border: 1px solid #d2d1d6;
+        font-size: 1.6rem;
+        font-weight: 500;
+        &::placeholder{
+            font-weight: 400;
+        }
+    }
+    &__bottom{
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
